jsonschemadsl2ecore.trafo.opt/test/test30/invalidtests/example3.test30
{
	 
	"boolean":1,
	"integer":1.0,
	"null":null,
	"number":1.32333,
	"string":"some string",
	"object":{},
	"extra":"extra"
}